# executorch-examples

./: .gitignore  Justfile
.github/workflows/: linear_regression.yml  multi_backend_demo.yml
linear_regression/: README.md  README_training.md  todo.md
linear_regression/cpp/: CMakeLists.txt  README.md  build.sh  build_multi.sh  main.cpp  main_multi_backend.cpp
linear_regression/models/: backend_metadata.json
linear_regression/python/: README.md  benchmark.py  benchmark_trained.py  export.py  export_multi_backend.py  export_trained_model.py  requirements.txt  run.py  train.py
llm/: export_qwen3_0_6b.py  export_qwen3_1_7b.py  export_qwen3_4b.py
llm/models/: 0_6b_config.json  1_7b_config.json  4_0b_config.json
mv2/cpp/: CMakeLists.txt
scripts/: build_executorch_cmake.sh  configure_executorch_cmake.sh  install_executorch_backends.sh  install_executorch_requirements.sh
